// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Password field Snapshots Empty password 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="fieldContainer"
      >
        <input
          class="field withRightIcon"
          id="id"
          type="password"
          value=""
        />
        <div
          class="rightIconContainer"
        >
          <svg
            class="icon"
          >
            eye.svg
          </svg>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Password field Snapshots Invalid password 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="fieldContainer"
      >
        <input
          class="field withRightIcon"
          id="id"
          type="password"
          value="pass"
        />
        <div
          class="rightIconContainer"
        >
          <svg
            class="icon"
          >
            eye.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="conditions"
      data-testid="password-field:validation-conditions"
    >
      <div
        class="condition container"
      >
        <div
          class="bar invalid"
        />
        <span
          class="label invalid"
        >
          Min. 6 letters
        </span>
      </div>
      <div
        class="condition container"
      >
        <div
          class="bar invalid"
        />
        <span
          class="label invalid"
        >
          Upper letter
        </span>
      </div>
      <div
        class="condition container"
      >
        <div
          class="bar valid"
        />
        <span
          class="label valid"
        >
          Lower letter
        </span>
      </div>
      <div
        class="condition container"
      >
        <div
          class="bar invalid"
        />
        <span
          class="label invalid"
        >
          A digit
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Password field Snapshots Valid password 1`] = `
<div>
  <div>
    <div
      class="container"
    >
      <div
        class="fieldContainer"
      >
        <input
          class="field withRightIcon"
          id="id"
          type="password"
          value="Password1"
        />
        <div
          class="rightIconContainer"
        >
          <svg
            class="icon"
          >
            eye.svg
          </svg>
        </div>
      </div>
    </div>
    <div
      class="conditions"
      data-testid="password-field:validation-conditions"
    >
      <div
        class="condition container"
      >
        <div
          class="bar valid"
        />
        <span
          class="label valid"
        >
          Min. 6 letters
        </span>
      </div>
      <div
        class="condition container"
      >
        <div
          class="bar valid"
        />
        <span
          class="label valid"
        >
          Upper letter
        </span>
      </div>
      <div
        class="condition container"
      >
        <div
          class="bar valid"
        />
        <span
          class="label valid"
        >
          Lower letter
        </span>
      </div>
      <div
        class="condition container"
      >
        <div
          class="bar valid"
        />
        <span
          class="label valid"
        >
          A digit
        </span>
      </div>
    </div>
  </div>
</div>
`;
